Added minimal learner dashboard

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -13,6 +13,6 @@
   <h1>{{ page.title }}</h1>
   <p>
     Image:<br />
-    <img src="{% wagtail_img_src hero %}" alt="home" />
+    <img src="{% wagtail_img_src page.hero %}" alt="home" />
   </p>
 {% endblock %}
