--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -15,10 +15,18 @@
 @import "user-menu";
 @import "error";
 @import "expandable";
+@import "dashboard";
 
 body {
-  font-family: Rajdhani, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Muli, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  color: #000000;
+  background: linear-gradient(#ffffff, #f5f5f5);
+
+  header {
+    background-color: #ffffff;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
+  }
 
   .main-panel {
     min-height: calc(100vh - 351px);
