--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -10,9 +10,24 @@
 {% endblock %}
 
 {% block content %}
-  <h1>{{ page.title }}</h1>
-  <p>
-    Image:<br />
-    <img src="{% wagtail_img_src page.hero %}" alt="home" />
-  </p>
+  <style>
+    {% if page.hero %}
+      .hero-background {
+        background-image: url('{% wagtail_img_src page.hero%}');
+      }
+    {% endif %}
+  </style>
+
+    <div class="hero-content hero-background">
+      <div class="container hero-container">
+        <div class="hero-title">
+          {% if page.hero_title %}
+            <h1>{{ page.hero_title }}</h1>
+          {% endif %}
+          {% if page.hero_subtitle %}
+            <h2>{{ page.hero_subtitle }}</h2>
+          {% endif %}
+        </div>
+      </div>
+    </div>
 {% endblock %}
