--- a/static/scss/top-app-bar.scss
+++ b/static/scss/top-app-bar.scss
@@ -1,14 +1,15 @@
 // sass-lint:disable mixins-before-declarations
 
 .header-holder {
-  padding: 20px 1px;
-
-  @include media-breakpoint-down(md) {
-    max-width: 100%;
-  }
+  padding: 10px 0;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
 
   .navbar {
     padding: 0;
+
+    @include media-breakpoint-down(sm) {
+      position: static;
+    }
   }
 
   .nowrap {
@@ -18,8 +19,8 @@
 
 .link-section.nowrap.login {
   ul {
+
     @include media-breakpoint-down(md) {
-      margin: 0;
       text-align: right;
 
       li {
@@ -38,18 +39,19 @@
 }
 
 .navbar-collapse {
+  margin: 0;
 
   li {
     letter-spacing: normal;
     display: inline-block;
     vertical-align: top;
-    font-size: 18px;
-    line-height: 25px;
-    font-weight: 500;
-    padding: 0 0 0 10px;
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 600;
+    padding: 0 0 0 25px;
 
     a {
-      padding: 5px 10px;
+      padding: 10px 16px;
       color: black;
       text-decoration: none;
       display: block;
@@ -59,52 +61,161 @@
       }
 
       &.button {
-        background: $primary;
+        @include media-breakpoint-up(md) {
+          background: $primary;
+          color: white;
+          border-radius: 3px;
+          box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, 0.57);
+
+          &:hover {
+            background: black;
+          }
+        }
+      }
+    }
+  }
+
+  &.collapsing,
+  &.show {
+    display: flex;
+    @include media-breakpoint-down(sm) {
+      display: block;
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
+    display: none;
+    position: absolute;
+    padding-top: 70px;
+    background: rgba(0, 0, 0, 0.91);
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 55px;
+    height: auto !important;
+    z-index: 999;
+
+    li {
+      display: block;
+      padding: 10px 0;
+      margin: 0 auto;
+      max-width: 170px;
+      text-align: left;
+
+      a {
         color: white;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 25px;
+        padding: 0;
+        margin-top: 5px;
 
         &:hover {
-          background: black;
+          color: white;
         }
       }
     }
   }
 }
 
-.navbar-collapse.collapsing,
-.navbar-collapse.show {
-  display: flex;
+.authenticated-menu {
+  display: none !important;
+
+  @include media-breakpoint-down(sm) {
+    display: block !important;
+  }
 }
 
 .site-logo {
-  width: 154px;
-  height: 47.5px;
+  width: 65px;
+  height: 35px;
+  @include media-breakpoint-down(sm) {
+    width: 46px;
+    height: 25px;
+  }
 }
 
-.navbar-toggler.nav-opener {
-  border: 1px solid $primary;
-  border-radius: 2px;
-  color: $primary;
-  margin: 5px 0 0;
-  padding: 8px 6px 6px;
+.navbar-brand {
+  display: inline-flex;
+  align-items: center;
+  padding: 0;
 
-  .navbar-toggler-icon {
-    width: 18px;
-    height: 15px;
-    display: inline-block;
-    border: 1px solid $primary;
-    border-width: 2px 0;
-    position: relative;
-    margin: -2px 5px 0 0;
-    vertical-align: top;
+  .mitx-online-link {
+    font-size: 24px;
+    color: black;
+    font-weight: bold;
+    line-height: 24px;
+    letter-spacing: 0;
 
-    &:after {
-      position: absolute;
-      left: 0;
-      right: 0;
-      content: "";
+    @include media-breakpoint-down(sm) {
+      font-size: 18px;
+      line-height: 18px;
+    }
+  }
+
+  .divider-large {
+    width: 1px;
+    height: 48px;
+    margin: 0 15px;
+    background: black;
+    @include media-breakpoint-down(sm) {
+      height: 34px;
+      margin: 0 8px;
+    }
+  }
+}
+
+.navbar-toggler {
+  position: relative;
+  width: 24px;
+  height: 24px;
+
+  ul {
+    cursor: pointer;
+  }
+
+  .bar {
+    // This series of .bar elements creates a hamburger menu that tranforms into an "X" when clicked
+    list-style: none;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    transition: .5s;
+    background: black;
+    transform: translateY(-50%) rotate(0);
+    opacity: 1;
+  }
+
+  .bar:nth-child(1) {
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+  }
+
+  .bar:nth-child(2) {
+    opacity: 0;
+    margin-top: 1px;
+  }
+
+  .bar:nth-child(3) {
+    top: 50%;
+    transform: translateY(-50%) rotate(-45deg);
+  }
+
+  &.collapsed {
+    .bar:nth-child(1) {
+      top: 20%;
+      transform: none;
+    }
+
+    .bar:nth-child(2) {
       top: 50%;
-      border-top: 2px solid $primary;
-      margin: -1px 0 0;
+      opacity: 1;
+    }
+
+    .bar:nth-child(3) {
+      top: 80%;
+      transform: none;
     }
   }
 }
