Implement basic site footer content

--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -11,26 +11,31 @@
         </address>
       </div>
       <div class="right-info">
-        <ul class="footer-nav">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-4 col-lg-5 col-md-6 cold-sm-12">
+        <span class="copyright"
+          >&copy; {% now "Y" %} Massachusetts Institute of Technology</span
+        >  
+      </div>
+
+      <div class="col-xl-8 col-lg-7 col-md-6 cold-sm-12">
+        <ul class="footer-sub-nav">
           <li><a href="/about-us/">About Us</a></li>
+          <li><a href="/terms-of-service/">Terms of Service</a></li>
+          <li><a href="/privacy-policy/">Privacy Policy</a></li>
+          <li><a href="/honor-code/">Honor Code</a></li>
+          <li>
+            <a
+              target="_blank"
+              href="https://accessibility.mit.edu/"
+              rel="noopener noreferrer"
+              >Accessibility</a
+            >
+          </li>
         </ul>
       </div>
     </div>
-    <ul class="footer-sub-nav">
-      <li><a href="/terms-of-service/">Terms of Service</a></li>
-      <li><a href="/privacy-policy/">Privacy Policy</a></li>
-      <li><a href="/honor-code/">Honor Code</a></li>
-      <li>
-        <a
-          target="_blank"
-          href="https://accessibility.mit.edu/"
-          rel="noopener noreferrer"
-          >Accessibility</a
-        >
-      </li>
-    </ul>
-    <span class="copyright"
-      >&copy; {% now "Y" %} All rights reserved. <a href="#">{{ site_name }}</a>.</span
-    >
   </div>
 </footer>
