--- a/static/scss/footer.scss
+++ b/static/scss/footer.scss
@@ -77,7 +77,7 @@
   }
 
   .footer-bottom {
-    padding: 15px 0 5px;
+    padding: 30px 0 5px;
 
     &:after {
       clear: both;
@@ -114,7 +114,7 @@
       }
 
       @include media-breakpoint-up(lg) {
-        margin: 5px 45px 0 0;
+        margin: 5px 21px 0 0;
       }
     }
 
@@ -123,11 +123,17 @@
       display: block;
       margin: 0;
     }
+
+    .copyright {
+      text-align: left;
+    }
   }
 
   .right-info {
     text-align: center;
     padding: 0 0 20px;
+    // TODO: remove that line while adding hubspot form in the footer
+    display: none;
 
     @include media-breakpoint-up(md) {
       float: right;
@@ -247,19 +253,22 @@
     padding: 0;
     margin: 0 0 5px;
     list-style: none;
-    text-align: center;
+    text-align: right;
     font-size: 15px;
     line-height: 20px;
+
+    @include media-breakpoint-down(md) {
+      text-align: center;
+    }
+
+    @include media-breakpoint-up(md) {
+      margin: 20px 0;
+    }
 
     li {
       display: inline-block;
       vertical-align: top;
-
-
-      &::before {
-        padding: 0 10px;
-        content: "|";
-      }
+      margin: 5px;
 
       &:first-child {
         &::before {
@@ -271,8 +280,17 @@
 
   .copyright {
     display: block;
-    text-align: center;
-    font-size: 12px;
+    text-align: left;
+    font-size: 15px;
     line-height: 18px;
+    margin: 5px 0;
+
+    @media (max-width: 576px) {
+      text-align: center;
+    }
+
+    @include media-breakpoint-up(md) {
+      margin: 25px 0;
+    }
   }
 }
