--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -17,6 +17,7 @@
 @import "expandable";
 @import "dashboard";
 @import "home";
+@import "product-details";
 
 body {
   font-family: Montserrat, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
