--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="{% static 'images/favicon.ico' %}" />
     {% include "partials/gtm_head.html" %}
         <link rel="stylesheet" type="text/css"
-              href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700|Montserrat:300,400,500,600,700|Montserrat:300,400,500,600,700&display=swap"
+              href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700|Montserrat:300,400,500,600,700&display=swap"
               media="all"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
           media="none" onload="if(media!='all') media='all'">
