Price is not required

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -58,7 +58,7 @@
               </div>
             </div>  
             <div class="stat-col large">
-              <span class="title">prerequisite</span>
+              <span class="title">prerequisites</span>
               <div class="text">
                 <div>{{ page.prerequisites | richtext }}</div>
               </div>
