--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -10,8 +10,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="hero-content" style="background-image: url('{% wagtail_img_src page.hero%}')">
-      <div class="container hero-container">
+    <div class="hero-container" style="background-image: url('{% wagtail_img_src page.hero%}')">
+      <div class="container hero-content">
         <div class="hero-title">
           {% if page.hero_title %}
             <h1>{{ page.hero_title }}</h1>
