--- a/static/scss/product-details.scss
+++ b/static/scss/product-details.scss
@@ -1,3 +1,4 @@
+// sass-lint:disable mixins-before-declarations
 .container {
   max-width: 1260px;
   padding: 0 15px;
@@ -6,23 +7,22 @@
 }
 
 .hero-block {
-  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   line-height: 30px;
   color: $black;
   padding: 20px 0;
 
-  @media (min-width: 768px) {
+  @include media-breakpoint-up(md) {
     font-size: 24px;
     line-height: 36px;
   }
 
-  @media (min-width: 1024px) {
+  @include media-breakpoint-up(lg) {
     padding: 38px 0;
   }
 
   .content-row {
-    @media (min-width: 1024px) {
+    @include media-breakpoint-up(lg) {
       display: flex;
       flex-flow: row wrap;
       margin: 0 -15px;
@@ -30,10 +30,10 @@
 
     .content-col {
       padding: 0 0 20px;
-      @media (min-width: 768px) {
+      @include media-breakpoint-up(md) {
         padding: 0 0 30px;
       }
-      @media (min-width: 1024px) {
+      @include media-breakpoint-up(lg) {
         width: calc(100% - 455px);
         padding: 0 15px;
         box-sizing: border-box;
@@ -41,7 +41,7 @@
 
       &.video {
         padding-bottom: 0;
-        @media (min-width: 1024px) {
+        @include media-breakpoint-up(lg) {
           width: 455px;
           padding: 0 15px;
           flex-shrink: 0;
@@ -53,6 +53,7 @@
   .video-holder {
     background: $sirocco;
     margin-top: 10px;
+    min-height: 200px;
 
     img {
       display: block;
@@ -61,58 +62,23 @@
   }
 
   .text-info {
-    @media (min-width: 1024px) {
+    @include media-breakpoint-up(lg) {
       max-width: 625px;
-    }
-  }
-
-  h1 {
-    font-size: 42px;
-    line-height: 50px;
-    margin: 0 0 13px;
-    font-weight: 700;
-
-    @media (min-width: 768px) {
-      font-size: 48px;
-      line-height: 60px;
     }
   }
 
   p {
     margin: 0 0 28px;
   }
-
-  .btn.btn-default {
-    font-size: 20px;
-    line-height: 30px;
-    color: #fff;
-    min-height: 60px;
-    border: 0;
-    box-sizing: border-box;
-    padding: 15px 20px;
-    text-align: center;
-    min-width: 230px;
-    display: inline-block;
-    vertical-align: top;
-    background: linear-gradient(174.8deg, #c5264e 0%, #951328 100%);
-    text-decoration: none;
-    font-weight: 700;
-    transition: linear 0.4s;
-
-    &:hover {
-      opacity: 0.8;
-    }
-  }
 }
 
 .info-block {
-  font-family: 'Montserrat', sans-serif;
   padding: 20px 0;
   font-size: 14px;
   line-height: 16px;
   color: $black;
 
-  @media (min-width: 1024px) {
+  @include media-breakpoint-up(lg) {
     padding: 30px 0;
   }
 
@@ -122,7 +88,7 @@
     margin: 0 -8px;
     align-items: baseline;
 
-    @media (min-width: 1200px) {
+    @include media-breakpoint-up(xl) {
       margin: 0 -18px;
     }
 
@@ -137,18 +103,19 @@
       flex-grow: 1;
       width: calc(50% - 16px);
 
-      @media (min-width: 1024px) {
+      @include media-breakpoint-up(lg) {
         width: auto;
       }
 
-      @media (min-width: 1200px) {
+      @include media-breakpoint-up(xl) {
         margin: 0 18px;
         width: 180px;
         flex-grow: inherit;
       }
 
       &.small {
-        @media (min-width: 1200px) {
+        font-size: 14px;
+        @include media-breakpoint-up(xl) {
           width: 140px;
         }
       }
@@ -158,39 +125,38 @@
         text-align: left;
         }
       }
+
+    .text {
+      padding: 14px 20px;
+      width: 100%;
+      flex-grow: 1;
+      display: inline-block;
+      align-items: center;
+      justify-content: center;
+      box-sizing: border-box;
+      font-size: 14px;
+
+      p {
+        margin: 0;
+      }
+
+      a:link {
+        color: $link-blue;
+        text-decoration: underline;
+      }
     }
 
-  .text {
-    padding: 14px 20px;
-    width: 100%;
-    flex-grow: 1;
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    font-size: 14px;
-
-    p {
-      margin: 0;
+    .title {
+      background-color: $sirocco;
+      font-weight: 500;
+      color: $tile-background;
+      text-align: center;
+      padding: 9px 8px;
+      width: 100%;
+      box-sizing: border-box;
+      height: 34px;
+      text-transform: uppercase;
     }
-
-    a:link {
-      color: $link-blue;
-      text-decoration: underline;
-    }
-  }
-
-  .title {
-    display: block;
-    background-color: $sirocco;
-    font-weight: 500;
-    color: $tile-background;
-    text-align: center;
-    padding: 9px 8px;
-    width: 100%;
-    box-sizing: border-box;
-    height: 34px;
-    text-transform: uppercase;
   }
 
   a {
@@ -203,19 +169,11 @@
 }
 
 .text-block {
-  font: 16px/28px 'Montserrat', sans-serif;
   color: $black;
   padding: 20px 0;
 
-  @media (min-width: 1024px) {
+  @include media-breakpoint-up(lg) {
     padding: 30px 0;
-  }
-
-  h2 {
-    font-size: 28px;
-    font-weight: 600;
-    line-height: 28px;
-    margin: 0 0 18px;
   }
 
   p {
