--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,9 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{% static 'images/favicon.ico' %}" />
     {% include "partials/gtm_head.html" %}
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700|Muli:300,400,500,600,700&display=swap"
-          media="all" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
+        <link rel="stylesheet" type="text/css"
+              href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700|Montserrat:300,400,500,600,700&display=swap"
+              media="all"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
           media="none" onload="if(media!='all') media='all'">
     {% js_settings %}
     {% render_bundle 'style' %}
