--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -16,9 +16,10 @@
 @import "error";
 @import "expandable";
 @import "dashboard";
+@import "home";
 
 body {
-  font-family: Muli, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Montserrat, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #000000;
   background: linear-gradient(#ffffff, #f5f5f5);
