--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-{% load static render_bundle %}
+{% load static render_bundle  %}
+{% load wagtailcore_tags wagtailembeds_tags %}
 
 {% block title %}{{ page.title }} | {{ site_name }}{% endblock %}
 
@@ -10,7 +11,87 @@
 {% endblock %}
 
 {% block content %}
-  <div class="course-catalog">
-    <h1>{{ page.title }}</h1>
-  </div>
+    <div id="wrapper">
+      <section class="hero-block">
+        <div class="container">
+          <div class="content-row">
+            <div class="content-col">
+              <div class="text">
+                <h1>{{ page.title }}</h1>
+                <p>{{ page.description |richtext }}</p>
+                <a href="#" class="action-btn">Enroll now</a>
+              </div>
+            </div>
+            <div class="content-col video">
+              <div class="video-holder">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="info-block">
+        <div class="container">
+          <div class="stats-row">
+            {% if start_date %}
+            <div class="stat-col">
+              <div class="title">start date</div>
+              <div class="text">
+                <strong>{{ start_date|date:"F j, Y" }}</strong>
+              </div>
+            </div>
+            {% endif %}
+            {% if page.length %}
+            <div class="stat-col small">
+              <div class="title">length</div>
+              <div class="text">
+                <strong>{{ page.length }}</strong>
+              </div>
+            </div>
+            {% endif %}
+            {% if page.effort %}
+            <div class="stat-col">
+              <div class="title">effort</div>
+              <div class="text">
+                <strong>{{ page.effort }}</strong>
+              </div>
+            </div>
+            {% endif %}
+            {% if page.price %}
+            <div class="stat-col small">
+              <div class="title">price</div>
+              <div class="text">
+                <strong>
+                  {% if page.price.0.value.link %}
+                    <a target="_blank" href={{page.price.0.value.link}}>{{page.price.0.value.text}}</a>
+                  {% else %}
+                  {{page.price.0.value.text}}
+                  {% endif %}
+                </strong>
+              </div>
+            </div>  
+            {% endif %}
+            {% if page.prerequisites %}
+            <div class="stat-col large">
+              <div class="title">prerequisites</div>
+              <div class="text">
+                <div>{{ page.prerequisites | richtext }}</div>
+              </div>
+            </div>
+            {% endif %}
+          </div>
+        </div>
+      </section>
+      <section class="text-block">
+        <div class="container">
+          <div class="text-holder">
+            <div class="about-text">
+              <h2>About this course</h2>
+              <p>{{ page.about |richtext }}</p>
+            </div>
+            <h2>What you’ll learn</h2>
+            <p>{{ page.what_you_learn |richtext }}</p>
+          </div>
+        </div>
+      </section>
+    </div>
 {% endblock %}
