Fixed container class  styling

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-    <div id="wrapper">
+    <div class="product-page" id="wrapper">
       <section class="hero-block">
         <div class="container">
           <div class="content-row">
