Added dashboard message for users with no enrollments

--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -23,7 +23,7 @@ body {
   font-family: Montserrat, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #000000;
-  background: linear-gradient(#ffffff, #f5f5f5);
+  background: linear-gradient(to bottom, #ffffff, #f5f5f5 200px);
 
   header {
     background-color: #ffffff;
