--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -23,7 +23,10 @@ body {
   font-family: Montserrat, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #000000;
-  background: linear-gradient(to bottom, #ffffff, #f5f5f5 200px);
+  background: linear-gradient(to bottom, #ffffff, #f5f5f5 250px);
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 
   header {
     background-color: #ffffff;
@@ -31,6 +34,7 @@ body {
   }
 
   .main-panel {
+    flex: 1;
     min-height: calc(100vh - 351px);
 
     // TODO: temporary fix for home page iamge size, please remove it after home page design
