--- a/static/scss/product-details.scss
+++ b/static/scss/product-details.scss
@@ -31,6 +31,11 @@
         margin: 0 -15px;
       }
 
+      @include media-breakpoint-down(md) {
+        display: flex;
+        flex-flow: column-reverse;
+      }
+
       .content-col {
         padding: 0 0 20px;
         @include media-breakpoint-up(md) {
@@ -42,14 +47,51 @@
           box-sizing: border-box;
         }
 
+        &:only-child {
+          width: 100%;
+        }
+
         &.video {
           padding-bottom: 0;
           @include media-breakpoint-up(lg) {
             width: 455px;
-            padding: 0 15px;
+            padding: 12px 15px;
             flex-shrink: 0;
           }
         }
+      }
+    }
+
+    .video-js {
+      width: 100%;
+      height: 263px;
+
+      .vjs-big-play-button {
+        background: black;
+        opacity: 0.8;
+        width: 64px;
+        height: 64px;
+        border: none;
+        border-radius: 50%;
+
+        &:hover {
+          opacity: 0.6;
+        }
+      }
+
+      .vjs-poster {
+        height: fit-content;
+      }
+    }
+
+    .video-js .vjs-big-play-button .vjs-icon-placeholder:before {
+      top: 0.3em;
+    }
+
+    .vjs-youtube {
+
+      .vjs-big-play-button {
+        display: none;
       }
     }
 
