--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -19,7 +19,7 @@
 @import "course-cards";
 @import "home";
 @import "product-details";
-@import "faculty-members";
+@import "product-faculty-members";
 
 
 body {
