--- a/static/scss/common.scss
+++ b/static/scss/common.scss
@@ -219,3 +219,27 @@ a.link-button {
     opacity: 0.8;
   }
 }
+
+.card-listing {
+  padding: 0;
+  margin: 0 -22px;
+  list-style: none;
+  letter-spacing: -0.32em;
+
+  li {
+    letter-spacing: normal;
+    display: inline-block;
+    vertical-align: top;
+  }
+}
+
+.highlight-card {
+  background: white;
+  border-bottom: 3px solid transparent;
+  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.23);
+
+  &:hover {
+    border-color: $brand-button-bg;
+    box-shadow: 0 2px 15px 4px rgba(0, 0, 0, 0.16);
+  }
+}
