--- a/static/scss/top-app-bar.scss
+++ b/static/scss/top-app-bar.scss
@@ -75,6 +75,10 @@
     }
   }
 
+  li[data-toggle="collapse"] {
+    display: none;
+  }
+
   &.collapsing,
   &.show {
     display: flex;
@@ -96,6 +100,10 @@
     z-index: 999;
 
     li {
+      display: none;
+    }
+
+    li[data-toggle="collapse"] {
       display: block;
       padding: 10px 0;
       margin: 0 auto;
