--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -32,22 +32,22 @@
       {% for product in products %}
       <li>
         <div class="course-card highlight-card">
-          <img src="{% wagtail_img_src product.feature_image %}" alt="Featured course image">
-          <div class="course-info">
-            <h2 class="course-card-title">
-              <a href="{{ product.url_path }}">
-                {{ product.title }}
-              </a>
-            </h2>
-            <div class="course-card-description">
-              {{ product.description |richtext }}
+          <a href="{{ product.url_path }}" class="course-card-link">
+            <img src="{% wagtail_img_src product.feature_image %}" alt="Featured course image">
+            <div class="course-info">
+              <h2 class="course-card-title">
+                  {{ product.title }}
+              </h2>
+              <div class="course-card-description">
+                {{ product.description |richtext }}
+              </div>
+              {% if product.start_date %}
+                <span class="date">
+                  Start date: {{ product.start_date | date:"F j, Y" }}
+                </span>
+              {% endif %}
             </div>
-            {% if product.start_date %}
-              <span class="date">
-                Start date: {{ product.start_date | date:"F j, Y" }}
-              </span>
-            {% endif %}
-          </div>
+          </a>
         </div>
       </li>
       {% endfor %}
