--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -19,6 +19,7 @@ $deep-sky-blue: #07a3ff;
 $tile-background: #fff;
 $tiles-background: rgba(53, 53, 53, 97);
 $tab-color: #c2c0bf;
+$label-subtitle: #666666;
 $gray-bg: #ebebeb;
 $darker-grey-bg: #2c2a29;
 $catalog-text: #909090;
