--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load static wagtail_img_src render_bundle %}
+{% load static wagtail_img_src render_bundle feature_img_src %}
 {% load wagtailcore_tags wagtailembeds_tags %}
 
 {% block title %}{{ site_name }}{% endblock %}
@@ -33,7 +33,7 @@
       <li>
         <div class="course-card highlight-card">
           <a href="{{ product.url_path }}" class="course-card-link">
-            <img src="{% wagtail_img_src product.feature_image %}" alt="Featured course image">
+            <img src="{% feature_img_src product %}" alt="Featured course image">
             <div class="course-info">
               <h2 class="course-card-title">
                   {{ product.title }}
