fix: styling and layout changes for dashboard, footer and product page

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -119,10 +119,10 @@
           <div class="text-holder">
             <div class="about-text">
               <h2>About this course</h2>
-              <p>{{ page.about |richtext }}</p>
+              {{ page.about |richtext }}
             </div>
             <h2>What you’ll learn</h2>
-            <p>{{ page.what_you_learn |richtext }}</p>
+            {{ page.what_you_learn |richtext }}
           </div>
         </div>
       </section>
