--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -2,7 +2,7 @@
 
 <footer class="footer">
   <div class="container">
-    <div class="footer-bottom">
+    <div class="footer-top">
       <div class="mit-info">
         <img src="{% static 'images/mit.png' %}" width="78" height="41" alt="MIT" loading="lazy"/>
         <address>
@@ -13,7 +13,7 @@
       <div class="right-info">
       </div>
     </div>
-    <div class="row">
+    <div class="row footer-bottom">
       <div class="col-xl-4 col-lg-5 col-md-6 cold-sm-12">
         <span class="copyright"
           >&copy; {% now "Y" %} Massachusetts Institute of Technology</span
