--- a/static/scss/dashboard.scss
+++ b/static/scss/dashboard.scss
@@ -38,3 +38,13 @@ $featureImgMobileWidth: 343px;
     }
   }
 }
+
+.dashboard h1 {
+  margin-top: 50px;
+  margin-bottom: 38px;
+
+  @include media-breakpoint-down(md) {
+    margin-top: 32px;
+    margin-bottom: 30px;
+  }
+}
