--- a/static/scss/footer.scss
+++ b/static/scss/footer.scss
@@ -4,85 +4,27 @@
 
   background: $footer-bg;
   color: white;
-  font-weight: 500;
-  padding: 0 0 15px;
+  padding: 0 0 42px;
 
-  .footer-top {
-    background: $very-light-gray;
-    overflow: hidden;
-    position: relative;
-    color: black;
-    padding: 40px 0 0;
-
-    &:after {
-      position: absolute;
-      left: 0;
-      top: 0;
-      right: 0;
-      content: '';
-      height: 10px;
-      background: linear-gradient(to right, rgba(61,189,191,1) 0%,rgba(241,186,70,1) 100%);
-    }
-
-    .content-holder {
-      max-width: 966px;
-
-      .row {
-        justify-content: space-between;
-
-        .col-sm-6 {
-          padding: 0 15px 20px;
-          text-align: center;
-
-          @include media-breakpoint-up(sm) {
-            max-width: 400px;
-            text-align: left;
-          }
-
-          img {
-            margin: 0 0 15px;
-            width: 78px;
-
-            @include media-breakpoint-up(sm) {
-              float: left;
-              margin: 0 45px 0 0;
-            }
-          }
-
-          .info {
-            overflow: hidden;
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 26px;
-          }
-        }
-      }
-    }
-
-    a {
-      color: $primary;
-    }
-
-    h2 {
-      color: $primary;
-      margin: 0 0 5px;
-      font-size: 28px;
-      line-height: 32px;
-      font-weight: 600;
-    }
-
-    p {
-      margin: 0;
-    }
+  @include media-breakpoint-down(sm) {
+    padding: 0 0 10px;
   }
 
-  .footer-bottom {
-    padding: 30px 0 5px;
+  .footer-top {
+    padding-top: 30px;
 
     &:after {
       clear: both;
       content: '';
       display: block;
+    }
+  }
+
+  .footer-bottom {
+    padding-top: 54px;
+
+    @include media-breakpoint-down(sm) {
+      padding-top: 5px;
     }
   }
 
@@ -114,7 +56,7 @@
       }
 
       @include media-breakpoint-up(lg) {
-        margin: 5px 21px 0 0;
+        margin: 5px 22px 0 0;
       }
     }
 
@@ -262,13 +204,17 @@
     }
 
     @include media-breakpoint-up(md) {
-      margin: 20px 0;
+      margin: 0;
     }
 
     li {
       display: inline-block;
       vertical-align: top;
-      margin: 5px;
+      margin: 0 5px;
+
+      @include media-breakpoint-down(sm) {
+        padding: 0 0 10px;
+      }
 
       &:first-child {
         &::before {
@@ -287,10 +233,19 @@
 
     @media (max-width: 576px) {
       text-align: center;
+      padding-bottom: 10px;
     }
 
     @include media-breakpoint-up(md) {
-      margin: 25px 0;
+      margin: 0;
+    }
+  }
+
+  .container {
+    max-width: 100%;
+
+    @include media-breakpoint-up(md) {
+      padding: 0 32px;
     }
   }
 }
