--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -40,6 +40,8 @@ body {
   .main-panel {
     flex: 1;
     min-height: calc(100vh - 351px);
+    z-index: 1;
+    position: relative;
 
     // TODO: temporary fix for home page iamge size, please remove it after home page design
     p {
