--- a/static/scss/product-details.scss
+++ b/static/scss/product-details.scss
@@ -1,6 +1,9 @@
 // sass-lint:disable mixins-before-declarations
 
 .product-page {
+  background: white;
+  z-index: -1;
+  position: relative;
 
   .container {
     max-width: 1260px;
@@ -223,6 +226,7 @@
 
     p {
       margin: 0 0 25px;
+      line-height: 28px;
     }
 
     .text-holder {
@@ -259,6 +263,14 @@
           border-radius: 100%;
         }
       }
+    }
+  }
+
+  .about-text {
+    padding-bottom: 37px;
+
+    @include media-breakpoint-down(sm) {
+      padding-bottom: 20px;
     }
   }
 }
