enhance footer layout design

--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -14,12 +14,6 @@
       </div>
     </div>
     <div class="row footer-bottom">
-      <div class="col-xl-4 col-lg-5 col-md-6 cold-sm-12">
-        <span class="copyright"
-          >&copy; {% now "Y" %} Massachusetts Institute of Technology</span
-        >  
-      </div>
-
       <div class="col-xl-8 col-lg-7 col-md-6 cold-sm-12">
         <ul class="footer-sub-nav">
           <li><a href="/about-us/">About Us</a></li>
@@ -36,6 +30,10 @@
           </li>
         </ul>
       </div>
+      <div class="col-xl-4 col-lg-5 col-md-6 cold-sm-12">
+        <span class="copyright">&copy; {% now "Y" %} Massachusetts Institute of Technology</span>
+      </div>
+
     </div>
   </div>
 </footer>
