--- a/static/scss/footer.scss
+++ b/static/scss/footer.scss
@@ -22,9 +22,11 @@
 
   .footer-bottom {
     padding-top: 54px;
+    flex-direction: row-reverse;
 
     @include media-breakpoint-down(sm) {
       padding-top: 5px;
+      flex-direction: row;
     }
   }
 
@@ -33,21 +35,19 @@
   }
 
   .mit-info {
-    font-size: 12px;
-    line-height: 22px;
-    text-align: center;
-    padding: 0 0 20px;
+    font-size: 14px;
+    line-height: 24px;
+    padding: 0 0 32px 16px;
 
     @include media-breakpoint-up(md) {
       padding: 0;
       float: left;
       width: 44%;
-      text-align: left;
     }
 
     img {
-      width: 78px;
-      height: 41px;
+      width: 92px;
+      height: 48px;
       margin: 0 auto 15px;
 
       @include media-breakpoint-up(md) {
@@ -200,7 +200,8 @@
     line-height: 20px;
 
     @include media-breakpoint-down(md) {
-      text-align: center;
+      text-align: left;
+      padding: 0 0 20px 16px;
     }
 
     @include media-breakpoint-up(md) {
@@ -213,7 +214,9 @@
       margin: 0 5px;
 
       @include media-breakpoint-down(sm) {
-        padding: 0 0 10px;
+        display: block;
+        margin: 0;
+        padding: 0 0 12px;
       }
 
       &:first-child {
@@ -232,7 +235,6 @@
     margin: 5px 0;
 
     @media (max-width: 576px) {
-      text-align: center;
       padding-bottom: 10px;
     }
 
