Remove the extra <p>

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -115,7 +115,7 @@
             </div>
             {% if page.prerequisites %}
               <h2>Prerequisites</h2>
-              <p>{{ page.prerequisites |richtext }}</p>
+              {{ page.prerequisites |richtext }}
             {% endif %}
             <h2>What you’ll learn</h2>
             {{ page.what_you_learn |richtext }}
