--- a/static/scss/dashboard.scss
+++ b/static/scss/dashboard.scss
@@ -15,6 +15,10 @@ $featureImgMobileWidth: 343px;
         color: black;
         text-decoration: underline;
       }
+
+      p {
+        margin: 0;
+      }
     }
 
     h4 a {
