--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -35,4 +35,6 @@ $footer-border: #686461;
 $dc-background: #f2f2f2;
 $subtitle-color: #ff4a68;
 $sirocco: #465a5b;
-$brand-button-bg: #a41e34
+$brand-button-bg: #a41e34;
+$brand-lighter-bg: #c5264e;
+$brand-darker-bg: #951328;
