--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -18,28 +18,29 @@
             <div class="content-col">
               <div class="text">
                 <h1>{{ page.title }}</h1>
-                <p>{{ page.description |richtext }}</p>
+                {# Description field contents are already rendered wrapped in a <p> tag #}
+                {{ page.description | richtext }}
                 {% if run %}
                   {% if is_enrolled %}
                     {% if run.courseware_url_path %}
-                      <a href="{{ run.courseware_url }}" class="action-btn" target="_blank" rel="noopener noreferrer">
+                      <a href="{{ run.courseware_url }}" class="btn btn-primary btn-gradient-red highlight" target="_blank" rel="noopener noreferrer">
                         Enrolled &#10003;
                       </a>
                     {% else %}
-                      <div class="action-btn">
+                      <div class="btn btn-primary btn-gradient-red highlight">
                         Enrolled &#10003;
                       </div>
                     {% endif %}
                   {% else %}
                     {% if sign_in_url %}
-                      <a href="{{ sign_in_url }}" class="action-btn">
+                      <a href="{{ sign_in_url }}" class="btn btn-primary btn-gradient-red highlight">
                         Enroll now
                       </a>
                     {% else %}
                       <form action="/enrollments/" method="post">
                         {% csrf_token %}
                         <input type="hidden" name="run" value="{{ run.id }}" />
-                        <button type="submit" class="action-btn">
+                        <button type="submit" class="btn btn-primary btn-gradient-red highlight">
                           Enroll now
                         </button>
                       </form>
