--- a/static/scss/auth.scss
+++ b/static/scss/auth.scss
@@ -1,10 +1,5 @@
 .auth-page {
   max-width: 650px;
-  padding-bottom: 35px;
-
-  &.registration-page {
-    max-width: 650px;
-  }
 
   h1 {
     @include media-breakpoint-down(xs) {
@@ -116,15 +111,11 @@
     padding: 20px;
   }
 
-  @include media-breakpoint-down(xs) {
-    padding: 15px 0;
-  }
-
   background-color: $white;
   border-width: 0 0 3px 0;
   border-style: solid;
   border-bottom-color: $brand-button-bg;
-  padding: 20px;
+  padding: 20px 35px 35px 35px;
   min-height: 400px;
 
   ul {
@@ -185,12 +176,6 @@
   .error-label {
     color: red;
   }
-}
-
-.registration-page .auth-form {
-  .row-inner {
-    margin-top: 20px;
-  }
 
   .col {
     align-self: flex-start;
@@ -222,6 +207,12 @@
   .label-secondary {
     padding-top: 10px;
     font-size: 14px;
+  }
+}
+
+.registration-page .auth-form {
+  .row-inner {
+    margin-top: 20px;
   }
 }
 
