--- a/static/scss/product-details.scss
+++ b/static/scss/product-details.scss
@@ -11,6 +11,13 @@
     margin: 0 auto;
   }
 
+  .btn-primary.highlight {
+    @include media-breakpoint-down(xs) {
+      display: block;
+      width: 100%;
+    }
+  }
+
   .hero-block {
     font-size: 20px;
     line-height: 30px;
